--- a/index.html
+++ b/index.html
@@ -2,9 +2,68 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Broadway Design</title>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
+    <div class="header">
+      <h1>Broadway Design</h1>
+      <nav>
+        <p><a href="#">Home</a></p>
+        <p><a href="#">Process</a></p>
+        <p><a href="#">Work</a></p>
+        <p><a href="#">Team</a></p>
+        <p><a href="#">Contact</a></p>
+      </nav>
+    </div>
+
+    <div class="subsection">
+
+      <h2>Our Process</h2>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="Identify">
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="Understand">
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="Execute">
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
+
+    </div>
+
+    <div class="separator">Designed in New York</div>
+
+    <div class="subsection">
+
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+
+      <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+
+    </div>
+
+    <div class="footer">
+      <nav>
+        © Broadway 2017
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Work</a>
+        <a href="#">Team</a>
+        <a href="#">Contact</a>
+      </nav>
+
+    </div>
+
 
   </body>
 </html>
